--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,6 +38,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/btnSolid"
         style="@style/MyTextInputLayout"
+        app:startIconDrawable="@drawable/ic_user"
+        app:startIconTintMode="multiply"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/gray"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -54,6 +58,7 @@
             android:id="@+id/email"
             android:drawableLeft="@drawable/ic_user"
             android:drawablePadding="10dp"
+            android:inputType="textEmailAddress"
             style="@style/MyTextInputEditText"
             android:singleLine="true"
             android:fontFamily="@font/mlight"
@@ -68,21 +73,27 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
+        app:startIconDrawable="@drawable/ic_hanger"
+        app:startIconTintMode="multiply"
+        app:endIconMode="password_toggle"
+        app:endIconTint="@color/gray"
         app:layout_constraintBottom_toTopOf="@+id/btnOutline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSolid">
+        app:layout_constraintTop_toBottomOf="@+id/btnSolid"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
-            android:drawableLeft="@drawable/ic_hanger"
-            android:drawablePadding="10dp"
             style="@style/MyTextInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_hanger"
+            android:drawablePadding="10dp"
             android:fontFamily="@font/mlight"
             android:hint="Kata Sandi"
             android:inputType="textPassword"
