--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -30,7 +30,7 @@
         android:layout_width="350dp"
         android:layout_height="100dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:src="@drawable/ic_asset_2"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
@@ -76,12 +76,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:startIconDrawable="@drawable/ic_user"
+            app:startIconTintMode="multiply">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/username"
@@ -100,7 +104,11 @@
             style="@style/MyTextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:startIconDrawable="@drawable/ic_message"
+            app:startIconTintMode="multiply"
             android:layout_marginTop="16dp"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/gray"
             app:layout_constraintEnd_toEndOf="@+id/btnSolid"
             app:layout_constraintStart_toStartOf="@+id/btnSolid"
             app:layout_constraintTop_toBottomOf="@+id/btnSolid">
@@ -114,6 +122,7 @@
                 android:drawablePadding="10dp"
                 android:fontFamily="@font/mlight"
                 android:hint="Email "
+                android:inputType="textEmailAddress"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -122,7 +131,11 @@
             style="@style/MyTextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:startIconDrawable="@drawable/ic_location"
+            app:startIconTintMode="multiply"
             android:layout_marginTop="16dp"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/gray"
             app:layout_constraintEnd_toEndOf="@+id/btnSolid"
             app:layout_constraintStart_toStartOf="@+id/btnSolid"
             app:layout_constraintTop_toBottomOf="@+id/btnSolid2">
@@ -142,9 +155,13 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid4"
             style="@style/MyTextInputLayout"
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/gray"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            app:startIconTintMode="multiply"
+            app:startIconDrawable="@drawable/ic_hanger"
             app:layout_constraintEnd_toEndOf="@+id/btnSolid2"
             app:layout_constraintStart_toStartOf="@+id/btnSolid3"
             app:layout_constraintTop_toBottomOf="@+id/btnSolid3">
@@ -166,6 +183,10 @@
             android:id="@+id/btnSolid5"
             style="@style/MyTextInputLayout"
             android:layout_width="0dp"
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/gray"
+            app:startIconTintMode="multiply"
+            app:startIconDrawable="@drawable/ic_secure_shield"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="@+id/btnSolid3"
@@ -189,8 +210,8 @@
             android:id="@+id/register"
             android:layout_width="0dp"
             android:layout_height="42dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="100dp"
             android:fontFamily="@font/mmedium"
             android:text="Daftar"
             android:textColor="@color/gray"
