--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -7,39 +7,39 @@
     android:background="@color/soft_guava"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/beige"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
+        android:elevation="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@android:color/white" >
 
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="20dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="24dp"
-        android:src="@drawable/ic_back_white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="18dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/ic_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:fontFamily="@font/mmedium"
-        android:text="Ubah Profile"
-        android:textAlignment="textStart"
-        android:textColor="@color/gray"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
-        app:layout_constraintStart_toEndOf="@+id/imageView15"
-        app:layout_constraintTop_toTopOf="@+id/imageView15" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ubah Profile"
+            android:fontFamily="@font/mmedium"
+            android:textSize="20sp"
+            android:textColor="@color/navy"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
+            app:layout_constraintStart_toEndOf="@+id/imageView11"/>
+    </androidx.appcompat.widget.Toolbar>
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -52,7 +52,8 @@
         app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
     <ImageView
     android:id="@+id/add_photo"
         android:layout_width="50dp"
@@ -78,6 +79,8 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid"
             style="@style/MyTextInputLayout2"
+            app:startIconDrawable="@drawable/ic_user"
+            app:startIconTintMode="multiply"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -103,6 +106,8 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid2"
             style="@style/MyTextInputLayout2"
+            app:startIconDrawable="@drawable/ic_message"
+            app:startIconTintMode="multiply"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -126,6 +131,8 @@
             android:id="@+id/btnSolid3"
             style="@style/MyTextInputLayout2"
             android:layout_width="0dp"
+            app:startIconDrawable="@drawable/ic_location"
+            app:startIconTintMode="multiply"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="@+id/btnSolid"
@@ -147,6 +154,10 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/btnSolid4"
             style="@style/MyTextInputLayout2"
+            app:startIconDrawable="@drawable/ic_hanger"
+            app:startIconTintMode="multiply"
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/gray"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
