--- a/app/src/main/res/layout/activity_mating_2.xml
+++ b/app/src/main/res/layout/activity_mating_2.xml
@@ -4,37 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_android_mobile___7"
+    android:background="@color/soft_guava"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="16dp"
-        android:text="JUDUL"
-        android:fontFamily="@font/mmedium"
-        android:textAlignment="center"
-        android:textColor="@color/navy"
-        android:textSize="25sp"
-        android:textStyle="bold"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/beige"
+        android:elevation="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:titleTextColor="@android:color/white" >
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="18dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/ic_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pengaturan Kucing"
+            android:fontFamily="@font/mmedium"
+            android:textSize="20sp"
+            android:textColor="@color/navy"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
+            app:layout_constraintStart_toEndOf="@+id/imageView11"/>
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/menu_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView19"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:ignore="MissingConstraints">
 
         <com.makeramen.roundedimageview.RoundedImageView
@@ -52,11 +70,11 @@
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
-            android:text="Nama Kucing"
             android:fontFamily="@font/mmedium"
-            android:textStyle="bold"
+            android:text="Nama Kucing"
             android:textColor="@color/navy"
             android:textSize="22sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView16"
             app:layout_constraintStart_toEndOf="@+id/imageView16"
             app:layout_constraintTop_toTopOf="@+id/imageView16"
@@ -66,8 +84,8 @@
             android:id="@+id/textView21"
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:text="Kelamin"
             android:fontFamily="@font/mlight"
+            android:text="Kelamin"
             android:textColor="@color/jeans"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView20"
@@ -77,9 +95,9 @@
             android:id="@+id/textView34"
             android:layout_width="0dp"
             android:layout_height="30dp"
+            android:fontFamily="@font/mlight"
             android:text="Umur/Ras"
             android:textColor="@color/jeans"
-            android:fontFamily="@font/mlight"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView21"
             app:layout_constraintTop_toBottomOf="@+id/textView21" />
