--- a/app/src/main/res/layout/activity_mating_4.xml
+++ b/app/src/main/res/layout/activity_mating_4.xml
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/backdrop_1"
+    tools:context=".MainActivity"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/backdrop_1"
-    tools:context=".MainActivity">
-
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="20dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="24dp"
-        android:src="@drawable/ic_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="0dp"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_height="wrap_content" android:layout_width="match_parent">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:text="Kucing Saya"
-        android:fontFamily="@font/mmedium"
-        android:textColor="@color/navy"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
-        app:layout_constraintStart_toEndOf="@+id/imageView15"
-        app:layout_constraintTop_toTopOf="@+id/imageView15" />
+        android:background="@color/beige"
+        android:elevation="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@android:color/white">
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="18dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="3dp"
+            android:src="@drawable/ic_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/mmedium"
+            android:text="Kucing Saya"
+            android:textColor="@color/navy"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
+            app:layout_constraintStart_toEndOf="@+id/imageView11" />
+    </androidx.appcompat.widget.Toolbar>
 
 
     <androidx.cardview.widget.CardView
@@ -41,7 +57,7 @@
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView18">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <ImageView
             android:layout_width="match_parent"
@@ -135,7 +151,7 @@
     <TextView
         android:id="@+id/text_1"
         android:layout_width="0dp"
-        android:layout_height="25dp"
+        android:layout_height="30dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/mmedium"
@@ -331,74 +347,78 @@
         app:layout_constraintTop_toTopOf="@+id/imageView21"
         app:layout_constraintVertical_bias="1.0" />
 
-    <LinearLayout
-        android:id="@+id/btnOutline_1"
-        android:layout_width="160dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/btn_outline"
-        android:foregroundGravity="center"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:text="Ubah"
-        android:textColor="@color/navy"
-        app:layout_constraintBottom_toTopOf="@+id/btnOutline_3"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout">
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/edit_cat_bio_foreground" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:id="@+id/btnOutline_1"
+            android:layout_width="160dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/btn_outline"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:orientation="horizontal"
             android:text="Ubah"
-            android:fontFamily="@font/mmedium"
             android:textColor="@color/navy"
-            android:textSize="18sp" />
-    </LinearLayout>
+            app:layout_constraintStart_toStartOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/textView22">
 
-    <LinearLayout
-        android:id="@+id/btnOutline_2"
-        android:layout_width="160dp"
-        android:layout_height="45dp"
-        android:background="@drawable/btn_outline"
-        android:foregroundGravity="center"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:text="Hapus"
-        android:textColor="@color/navy"
-        app:layout_constraintBottom_toBottomOf="@+id/btnOutline_1"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout">
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/edit_cat_bio_foreground" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/delete_account" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/mmedium"
+                android:text="Ubah"
+                android:textColor="@color/navy"
+                android:textSize="18sp" />
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/mmedium"
+        <LinearLayout
+            android:id="@+id/btnOutline_2"
+            android:layout_width="160dp"
+            android:layout_height="45dp"
+            android:background="@drawable/btn_outline"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:orientation="horizontal"
             android:text="Hapus"
             android:textColor="@color/navy"
-            android:textSize="18sp" />
+            app:layout_constraintBottom_toBottomOf="@+id/btnOutline_1"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+            app:layout_constraintTop_toTopOf="@+id/btnOutline_1">
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/delete_account" />
 
-    <dita.shafira.mate.component.BtnOutline
-        android:id="@+id/btnOutline_3"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="@font/mmedium"
-        android:textSize="18sp"
-        android:text="Kucing Disukai"
-        android:textColor="@color/navy"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/btnOutline_2"
-        app:layout_constraintStart_toStartOf="@+id/btnOutline_1" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/mmedium"
+                android:text="Hapus"
+                android:textColor="@color/navy"
+                android:textSize="18sp" />
 
+        </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <dita.shafira.mate.component.BtnOutline
+            android:id="@+id/btnOutline_3"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="24dp"
+            android:fontFamily="@font/mmedium"
+            android:text="Kucing Disukai"
+            android:textAllCaps="false"
+            android:textColor="@color/navy"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/btnOutline_2"
+            app:layout_constraintStart_toStartOf="@+id/btnOutline_1"
+            app:layout_constraintTop_toBottomOf="@+id/btnOutline_1" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
