--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,55 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Mate" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Mate" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/beige</item>
+        <item name="colorPrimaryVariant">@color/soft_gray</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="myText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/salem</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="buttonOutline" style="@android:style/Widget.AppCompat.Button">
+        <item name="android:textColor">@color/salem</item>
+        <item name="android:backgroundTint">@android:color/white</item>
+    </style>
+
+    <style name="MyTextInputLayout2" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@color/gray</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="boxStrokeColor">@color/gray</item>
+    </style>
+
+    <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@color/salem</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="boxStrokeColor">@color/salem</item>
+        <!--        <item name="b"-->
+    </style>
+
+    <style name="MyTextInputEditText" parent="ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense">
+        <item name="android:textColor">@color/jeans</item>
+    </style>
+
+    <style name="SwitchCustom">
+        <item name="colorControlActivated">@color/salem</item>
+        <!--        <item name="colorCon"-->
+    </style>
+    <style name="slider_red">
+        <item name="colorPrimary">@color/salem</item>
+    </style>
+
+    <style name="customfontstyle" parent="@android:style/TextAppearance.Small">
+        <item name="android:fontFamily">@font/lobster</item>
     </style>
 </resources>
